Changed a few things as well

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <html>
    <head>
       <title>Who Will Be In Super Bowl LVI?</title>
+      <link rel="stylesheet" href="styles.css">
    </head>
 <header>
    <body>
+      <link rel="stylesheet" href="styles.css">
       <h1>Who Will Be In Super Bowl LVI?</h1>
       <nav>
          <ul>
@@ -13,7 +15,7 @@
                <a href="#tampa">Tampa Bay Buccaneers</a>
             </li>
             <li>
-               <a href="#kc">Kansas City Chiefs</a>
+               <a href="#chiefs">Kansas City Chiefs</a>
             </li>
             <li>
                <a href="#bay">Green Bay Packers</a>
@@ -25,8 +27,8 @@
       <article>
          <article>
             <section>
-               <a name="tampabay"></a>
-               <h2>Tampa Bay Buccaneers</h2>
+               <a name="tampa"></a>
+               <h2 class="index-tampa" id="index-tampa">Tampa Bay Buccaneers</h2>
                <p>
                   Some of the criticism that the Buccaneers defense has taken is warranted, however, this defense could get healthy at the right time. Plus, they have something they didn’t have last year: championship experience. 
                   Buccaneers running back Leonard Fournette, who missed the rest of the regular season, is expected back for the playoffs helping the Bucs offense greatly.
@@ -42,7 +44,7 @@
             </section>
             <section>
                <a name="chiefs"></a>
-               <h2>Kansas City Chiefs</h2>
+               <h2 class="index-chiefs" id="mainHeading">Kansas City Chiefs</h2>
                <p>
                   There are more than enough reasons to believe that the Chiefs will secure another Super Bowl win. 
                   It's hard to identify any offense with better weapons than Patrick Mahomes, Clyde Edwards-Helaire, Tyreek Hill, and Travis Kelce. 
@@ -58,8 +60,8 @@
             </section>
             <section>
                <a name="bay"></a>
-               <h2>Green Bay Packers</h2>
-               <p>
+               <h2 class="index-packers">Green Bay Packers</h2>
+               <p class="funParagraph" id="testP">
                   Aaron Rodgers... That's all we could say and almost no NFL fan would bat an eye.
                   Aaron Rodgers is currently on the road to winning NFL MVP, and for good reason!
                   With guys getting banged up on both sides of the ball, Aaron Rodgers keeps the ball moving (literally and metaphorically)!
